syntax = "proto3";

// 包名
package protos;

option go_package = "./protos";

import "google/protobuf/timestamp.proto";

message UserModel{
    int32 user_id=1;
    string user_name=2;
    string user_passd=3;
    google.protobuf.Timestamp user_date=4;
}