syntax = "proto3";

// 包名
package protos;

option go_package = "./protos";

import "user.proto";

message RegResponse{
    string status=1;
    string message=2;
}

service UserService{
    rpc UserReg(UserModel) returns (RegResponse);
}